package com.example.Finma_BE.enums;

public enum AccountType {
    CASH, BANK, E_WALLET, CREDIT, SAVING, INVESTMENT
}
