package com.example.Finma_BE.enums;

public enum CategoryType {
    EXPENSE, INCOME, FINANCE
}
