package com.example.Finma_BE.enums;

public enum Frequency {
    DAILY, WEEKLY, MONTHLY, YEARLY
}
